- JasperReports dependencies were missing causing in functions to fail when generating the report.
- Stop button for report generation did not work. It now stops the exporting process. Known issue is that the report generation process of Jasper Reports can not be stopped.
- Stop button is for report generation is only active when a process is running.

[Changed]
- Added UI scaling option to the Look and Feel settings (25% to 300%)
- Introduction of cascade delete; when you delete properties / referenced items Data Crow will ask you to delete the references to this item as well.

[Not yet finished]
- A status bar has been added to the view(s).


--------------------------------------------------------------------
Data Crow version 4.9.0                      Released on 2023-05-09
--------------------------------------------------------------------
Version 4.9 brings you a whole new module to register Comic Books. It is supported by the invaluable online source that is https://comicvine.gamespot.com.
I have not yet created a DMG for MacOS, I am planning on creation and uploading this package, as part of this release, within the next few days.

[New]
- Data Crow synchronization service for external (to Data Crow) devices. This service allows both module and data to be synchronized. At the current stage, it's a one way synchronization going from Data Crow to the external device. This is the build up for something great(er) in the near future.
- New module: comic books.
- New online search for comics: Comic Vine
- New online search for comic book characters: Comic Vine

[Fixed]
- NPE exception during the set up of the user folder due to the logger not having been initialized yet. This issue will hide the real underlying issue.
- Fixed an error on startup for MacOS (from the terminal).
- Fixed an error on startup for OpenJDK.
- Items not described correctly for none standard modules.
- Icon not showing for the shortcut created on Linux.